--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,13 @@
   "dependencies": {
     "@codemirror/theme-one-dark": "^6.1.2",
     "@mdi/font": "^7.2.96",
+    "@pinia/nuxt": "^0.4.11",
     "codemirror": "^6.0.1",
+    "pinia": "^2.1.3",
     "vue-codemirror": "^6.1.1",
     "vuetify": "^3.2.4"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
