--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --port=8001",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -21,6 +21,7 @@
     "@pinia/nuxt": "^0.4.11",
     "codemirror": "^6.0.1",
     "pinia": "^2.1.3",
+    "sass": "^1.62.1",
     "vue-codemirror": "^6.1.1",
     "vuetify": "^3.2.4"
   },
