--- a/example.docker-compose.yml
+++ b/example.docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: "3.9"
 
 services:
   migration:
@@ -32,7 +32,7 @@ services:
     links:
       - backend
   database:
-    image: postgres:15
+    image: postgres:15-alpine
     container_name: database
     restart: always
     expose:
@@ -44,6 +44,11 @@ services:
       - POSTGRES_PASSWORD=PGPASSWORD # postgres password
       - POSTGRES_DB=scrapyard # postgres database
       - PGDATA=/data/postgres # postgres data directory
+    command: postgres -c 'max_connections=200'
+    stdin_open: true
+    tty: true
+    ports:
+      - 5432:5432/tcp
   storage:
     image: minio/minio
     container_name: storage
@@ -57,6 +62,6 @@ services:
     command: server /data
 
 volumes:
-  pgdata: 
+  pgdata:
     driver: local
   storage:
