--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,6 @@ RUN cargo install --path . --no-default-features
 
 FROM debian:bullseye-slim as runtime
 
-RUN apt-get update && apt-get install -y libpq-dev && apt install -y openssl
+RUN apt-get update && apt install -y libpq-dev openssl
 
 COPY --from=builder /usr/local/cargo/bin/backend /usr/local/bin/backend
